Add animation multi-docs page

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
 
                 <!-- start explore topic section -->
-                <section class="explore-topic-section section-padding overflow-hidden">
+                <section class="explore-topic-section section-padding">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-xl-6">
@@ -546,8 +546,8 @@
                             <!-- col end -->
                         </div>
                         <!-- row end -->
-                        <div class="row isotope-items">
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                        <div class="row isotope-items wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
                                 <div class="explore-topics-card rt-color-shade7-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -579,7 +579,7 @@
                                 </div>
                             </div>
                             <!-- col end -->
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
                                 <div class="explore-topics-card rt-color-shade18-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -612,7 +612,7 @@
                                 </div>
                             </div>
                             <!-- col end -->
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima digeco">
                                 <div class="explore-topics-card rt-color-shade8-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -644,7 +644,7 @@
                                 </div>
                             </div>
                             <!-- col end -->
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
                                 <div class="explore-topics-card rt-color-shade9-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -678,7 +678,7 @@
                                 </div>
                             </div>
                             <!-- col end -->
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
                                 <div class="explore-topics-card rt-color-shade10-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -710,7 +710,7 @@
                                 </div>
                             </div>
                             <!-- col end -->
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi eikra wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi eikra">
                                 <div class="explore-topics-card rt-color-shade11-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
