--- a/multi-docs.html
+++ b/multi-docs.html
@@ -419,7 +419,7 @@
                 <section class="section-padding">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-xl-6">
+                            <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="isotope-menu">
                                     <ul class="isotope-menu-list d-flex justify-content-center flex-wrap">
                                         <li class="active" data-filter=".docfi">Docfi</li>
@@ -431,8 +431,10 @@
                                     </ul>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
-                        <div class="row isotope-items">
+                        <!-- row end -->
+                        <div class="row isotope-items wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
                                 <div class="explore-topics-card rt-color-shade7-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -464,6 +466,7 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
                                 <div class="explore-topics-card rt-color-shade18-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -496,6 +499,7 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima digeco">
                                 <div class="explore-topics-card rt-color-shade8-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -527,6 +531,7 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
                                 <div class="explore-topics-card rt-color-shade9-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -560,6 +565,7 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
                                 <div class="explore-topics-card rt-color-shade10-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -591,6 +597,7 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi eikra">
                                 <div class="explore-topics-card rt-color-shade11-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
@@ -622,8 +629,11 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end explore topic section -->
 
@@ -646,7 +656,7 @@
                         </div>
                         <div class="theme-logo-wrapper">
                             <div class="row justify-content-center">
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInLeft animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-1.svg" alt="">
@@ -659,7 +669,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-2.svg" alt="">
@@ -672,7 +682,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInRight animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-3.svg" alt="">
@@ -685,7 +695,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInLeft animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-4.svg" alt="">
@@ -698,7 +708,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-5.svg" alt="">
@@ -711,7 +721,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-lg-6 col-xl-4">
+                                <div class="col-md-12 col-lg-6 col-xl-4 wow animate__fadeInRight animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                     <div class="logo-card logo-card--style-2 d-flex justify-content-between align-items-center">
                                         <div class="logo">
                                             <img src="images/best-online-doc/logo-6.svg" alt="">
@@ -727,6 +737,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end -->
                     <div class="shapes">
                         <img src="images/best-online-doc/OBJECTS.png" alt="" class="wow animate__fadeInLeft animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                     </div>
@@ -746,7 +757,7 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
