--- a/three-columns.html
+++ b/three-columns.html
@@ -377,7 +377,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-8">
                                 <div class="rt-hero-section-content-wrapper">
-                                    <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex justify-content-between align-items-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <div class="input-area d-flex align-items-center">
@@ -400,10 +400,12 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -425,6 +427,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -432,7 +435,7 @@
                 <section class="section-padding">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="explore-topics-card rt-color-shade7-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -463,7 +466,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
+                            <!-- col end -->
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="explore-topics-card rt-color-shade18-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -495,7 +499,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima digeco">
+                            <!-- col end -->
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi classima digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                 <div class="explore-topics-card rt-color-shade8-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -526,7 +531,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
+                            <!-- col end -->
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                 <div class="explore-topics-card rt-color-shade9-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -559,7 +565,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
+                            <!-- col end -->
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                 <div class="explore-topics-card rt-color-shade10-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -590,7 +597,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi eikra">
+                            <!-- col end -->
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 item docfi eikra wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
                                 <div class="explore-topics-card rt-color-shade11-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -621,8 +629,11 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end explore topic section -->
 
@@ -639,7 +650,8 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <!-- col end -->
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -647,10 +659,15 @@
                                             <button class="submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                 </div>
+                                <!-- row end -->
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
