--- a/two-columns.html
+++ b/two-columns.html
@@ -377,7 +377,7 @@
                         <div class="row justify-content-center">
                             <div class="col-xl-8">
                                 <div class="rt-hero-section-content-wrapper">
-                                    <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex justify-content-between align-items-center">
+                                    <div class="searchbox-container searchbox-container--style-1 d-none d-sm-flex justify-content-between align-items-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <div class="searchbox-textfield">
                                             <form class="rt-searchbox-form" role="search" action="" method="get">
                                                 <div class="input-area d-flex align-items-center">
@@ -399,10 +399,12 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
                 
@@ -424,6 +426,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -431,7 +434,7 @@
                 <section class="section-padding">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="explore-topics-card rt-color-shade7-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -462,7 +465,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima gym">
+                            <!-- col end -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima gym wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="explore-topics-card rt-color-shade18-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -494,7 +498,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima digeco">
+                            <!-- col end -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi classima digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                 <div class="explore-topics-card rt-color-shade8-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -525,7 +530,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
+                            <!-- col end -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                 <div class="explore-topics-card rt-color-shade9-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -558,7 +564,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi metro digeco">
+                            <!-- col end -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi metro digeco wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                 <div class="explore-topics-card rt-color-shade10-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -589,7 +596,8 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi eikra">
+                            <!-- col end -->
+                            <div class="col-lg-6 col-md-6 col-sm-12 item docfi eikra wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
                                 <div class="explore-topics-card rt-color-shade11-bg">
                                     <div class="explore-topics-header d-flex justify-content-between align-items-center">
                                         <div class="title-area d-flex align-items-center">
@@ -620,8 +628,11 @@
                                     <a href="" class="view-all-btn">View All</a>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end explore topic section -->
 
@@ -638,7 +649,8 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <!-- col end -->
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -646,10 +658,15 @@
                                             <button class="submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                 </div>
+                                <!-- row end -->
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
