Add animation to elementspage

--- a/elements.html
+++ b/elements.html
@@ -389,8 +389,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end-->
                         </div>
+                        <!-- row end-->
                     </div>
+                    <!-- container end-->
                 </section>
                 <!-- end Hero section -->
 
@@ -412,6 +415,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end-->
                 </div>
                 <!-- end page-menu section -->
 
@@ -445,6 +449,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- col end-->
                                     <div class="col-lg-12 col-lg-8 col-xl-8 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="tab-pane-wrapper">
                                             <div class="tab-content" id="v-pills-tabContent">
@@ -467,7 +472,7 @@
 
                                                         <div class="element-info-card-wrapper">
                                                             <div class="row">
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">Documentation Features</a>
@@ -477,7 +482,7 @@
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">Tabs Widget</a>
@@ -487,7 +492,7 @@
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="600ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">Notice / Message Widget</a>
@@ -497,7 +502,7 @@
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="700ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">Accordions Widget</a>
@@ -507,7 +512,7 @@
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="800ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">Cheatsheet Widget</a>
@@ -517,7 +522,7 @@
                                                                         </p>
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-md-6 col-lg-6 col-xl-6">
+                                                                <div class="col-md-6 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="900ms">
                                                                     <div class="element-info-card">
                                                                         <h3 class="title">
                                                                             <a href="">More...</a>
@@ -723,15 +728,19 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="explore-btn">
+                                            <div class="explore-btn wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 <a href="">Explore Topics</a>
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- col end-->
                                 </div>
+                                <!-- row end-->
                             </div>
                         </div>
+                        <!-- row end-->
                     </div>
+                    <!-- container end-->
                 </section>
 
 
@@ -748,7 +757,7 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -758,8 +767,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end-->
                         </div>
+                        <!-- row end-->
                     </div>
+                    <!-- container end-->
                 </section>
                 <!-- end call-to-action-section -->
 
@@ -903,6 +915,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end-->
                 </footer>
                 <!-- end footer section -->
 
