--- a/faq.html
+++ b/faq.html
@@ -386,8 +386,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -409,6 +412,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -425,7 +429,9 @@
                                     </p>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
 
                         <div class="row justify-content-center">
                             <div class="col-xl-11">
@@ -455,6 +461,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                     <div class="col-lg-12 col-lg-8 col-xl-8 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="tab-pane-wrapper">
                                             <div class="tab-content" id="v-pills-tabContent">
@@ -917,10 +924,15 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                 </div>
+                                <!-- row end -->
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </div>
 
                 <div class="faq-section section-padding rt-color-shade28-bg">
@@ -936,7 +948,9 @@
                                     </p>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
 
                         <div class="row justify-content-center">
                             <div class="col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
@@ -1015,6 +1029,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                             <div class="col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                 <div class="accordion accordion-flush accordion--style-1 accordion--style-2" id="accordion2">
                                     <div class="accordion-item">
@@ -1091,8 +1106,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </div>
 
 
@@ -1109,10 +1127,12 @@
                                     </p>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
 
                         <div class="row justify-content-center">
-                            <div class="col-xl-7">
+                            <div class="col-xl-7 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                 <div class="accordion accordion-flush accordion--style-4" id="accordion3">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header" id="flush-headingSeven">
@@ -1188,8 +1208,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </div>
 
                 
@@ -1207,7 +1230,7 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -1217,8 +1240,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
