Add animation to 404 page

--- a/404.html
+++ b/404.html
@@ -386,8 +386,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end Hero section -->
 
@@ -409,6 +412,7 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- container end -->
                 </div>
                 <!-- end page-menu section -->
 
@@ -417,12 +421,13 @@
                     <div class="container">
                         <div class="rt-error-area">
                             <div class="row justify-content-center">
-                                <div class="col-xl-10">
+                                <div class="col-xl-10 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                     <div class="img-area-wrapper">
                                         <img src="images/404/404-img-1.png" alt="">
                                         <img src="images/404/404-rocket.png" alt="" class="rocket wow animate__fadeInBottomLeft animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
                                     </div>
                                 </div>
+                                <!-- col end -->
                                 <div class="col-xl-6">
                                     <div class="section-text-content text-center">
                                         <h2 class="section-heading wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="400ms">
@@ -430,16 +435,19 @@
                                         </h2>
                                     </div>
     
-                                    <div class="form-wrapper d-flex align-items-center">
+                                    <div class="form-wrapper d-flex align-items-center wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <form action="">
                                             <input type="text" placeholder="Search">
                                         </form>
                                         <a href="" class="home-back-btn">Back to Home Page</a>
                                     </div>
                                 </div>
+                                <!-- col end -->
                             </div>
+                            <!-- row end -->
                         </div>
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end error-section --> 
 
@@ -456,7 +464,8 @@
                                             </h2>
                                         </div>
                                     </div>
-                                    <div class="col-xl-6">
+                                    <!-- col end -->
+                                    <div class="col-xl-6 wow animate__fadeInUp animate__animated" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <div class="call-to-cation-form-wrapper d-flex">
                                             <form action="" class="">
                                                 <input type="text" placeholder="Your email">
@@ -464,10 +473,15 @@
                                             <button class="submit-btn submit-btn--style-1">Get Started</button>
                                         </div>
                                     </div>
+                                    <!-- col end -->
                                 </div>
+                                <!-- row end -->
                             </div>
+                            <!-- col end -->
                         </div>
+                        <!-- row end -->
                     </div>
+                    <!-- container end -->
                 </section>
                 <!-- end call-to-action-section -->
 
@@ -611,6 +625,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- container end -->
                 </footer>
                 <!-- end footer section -->
 
